Update One Line List Comprehension  - Question.ipynb

--- a/One Line List Comprehension  - Question.ipynb
+++ b/One Line List Comprehension  - Question.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## Problem\n",
-    "We are creating a database for a real estate company on GIS house information and property values over the years. On the GIS websites property information is recorded with the house number followed by the street name and abbreviation (i.e. 37 Maple ST). Two columns need to be create from the house address that show the house number and the house street name. This will be used in a front end web application which will run SQL queries based on those 2 columns.\n",
+    "We are creating a database for a real estate company on GIS house information and property values over the years. On the GIS websites, property information is recorded with the house number followed by the street name and abbreviation (i.e. 37 Maple ST). Two columns need to be create from the house address that show the house number and the house street name. This will be used in a front end web application which will run SQL queries based on those 2 columns.\n",
     "\n",
     "The problem is that when string slicing off the numbers, some of the data points contained symbols followed by more numbers. This is due to multi families or condos. (i.e. 37 + 39 Maple ST)\n",
     "\n",
