Update One Line List Comprehension  - Question.ipynb

--- a/One Line List Comprehension  - Question.ipynb
+++ b/One Line List Comprehension  - Question.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "The problem is that when string slicing off the numbers, some of the data points contain symbols followed by more numbers. This is due to multi families or condos. (i.e. 37 + 39 Maple ST)\n",
     "\n",
-    "Ultimately, we want a column named \"House_Number\" that contains the first number of the address (i.e. 37 for 37 Maple ST) and a column named \"House_Street\" that only contains street names (i.e. Maple ST)\n",
+    "Ultimately, we want a column named \"House_Number\" that contains the first number of the address (i.e. 37 for 37 Maple ST) and a column named \"House_Street\" that contains street names (i.e. Maple ST)\n",
     "\n",
     "- Note: \n",
     " - The final script can to add the data can be achieve in 3 lines of code using string comprehension \n",
