Update One Line List Comprehension  - Question.ipynb

--- a/One Line List Comprehension  - Question.ipynb
+++ b/One Line List Comprehension  - Question.ipynb
@@ -13,7 +13,7 @@
     "Ultimately, we want a column named \"House_Number\" that contains the first number of the address (i.e. 37 for 37 Maple ST) and a column named \"House_Street\" that contains street names (i.e. Maple ST)\n",
     "\n",
     "- Note: \n",
-    " - The final script can to add the data can be achieve in 3 lines of code using string comprehension \n",
+    " - The final script to add the data can be achieve in 3 lines of code using string comprehension \n",
     " - Some streets incorporate a number into this \"name\" so .replace(num) functions will not work. (i.e. 37 RT 63)\n",
     " - Data needs to be recorded into a dictionary so that it can be reentered into the original dataframe at the correct spot\n"
    ]
