Update One Line List Comprehension  - Solution.ipynb

--- a/One Line List Comprehension  - Solution.ipynb
+++ b/One Line List Comprehension  - Solution.ipynb
@@ -6,14 +6,14 @@
    "metadata": {},
    "source": [
     "## Problem\n",
-    "We are creating a database for a real estate company on GIS house information and property values over the years. On the GIS websites property information is recorded with the house number followed by the street name and abbreviation (i.e. 37 Maple ST). Two columns need to be create from the house address that show the house number and the house street name. This will be used in a front end web application which will run SQL queries based on those 2 columns.\n",
+    "We are creating a database for a real estate company on GIS house information and property values over the years. On the GIS websites, property information is recorded with the house number followed by the street name and abbreviation (i.e. 37 Maple ST). Two columns need to be create from the house address that show the house number and the house street name. This will be used in a front end web application which will run SQL queries based on those 2 columns.\n",
     "\n",
-    "The problem is that when string slicing off the numbers, some of the data points contained symbols followed by more numbers. This is due to multi families or condos. (i.e. 37 + 39 Maple ST)\n",
+    "The problem is that when string slicing off the numbers, some of the data points contain symbols followed by more numbers. This is due to multi families or condos. (i.e. 37 + 39 Maple ST)\n",
     "\n",
-    "Ultimately, we want a column named \"House_Number\" that contains the first number of the address (i.e. 37 for 37 Maple ST) and a column named \"House_Street\" that only contains street names (i.e. Maple ST)\n",
+    "Ultimately, we want a column named \"House_Number\" that contains the first number of the address (i.e. 37 for 37 Maple ST) and a column named \"House_Street\" that contains street names (i.e. Maple ST)\n",
     "\n",
     "- Note: \n",
-    " - The final script can to add the data can be achieve in 3 lines of code using string comprehension \n",
+    " - The final script to add the data can be achieve in 3 lines of code using string comprehension \n",
     " - Some streets incorporate a number into this \"name\" so .replace(num) functions will not work. (i.e. 37 RT 63)\n",
     " - Data needs to be recorded into a dictionary so that it can be reentered into the original dataframe at the correct spot\n"
    ]
