Update One Line List Comprehension  - Question.ipynb

--- a/One Line List Comprehension  - Question.ipynb
+++ b/One Line List Comprehension  - Question.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "- Note: \n",
     " - The final script to add the data can be achieve in 3 lines of code using list comprehension \n",
-    " - Some streets incorporate a number into this \"name\" so .replace(num) functions will not work. (i.e. 37 RT 63)\n",
+    " - Some street names incorporate a number so .replace(num) functions will not work. (i.e. 37 RT 63)\n",
     " - Data needs to be recorded into a dictionary so that it can be reentered into the original dataframe at the correct spot\n"
    ]
   },
